--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! This is my webapp.
-            HI(after lical changes)
+            <h4>HI(after lical changes)</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
